[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Chip/chip_red.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Shooter.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="CircleShape2D" id=2]
radius = 150.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="Shooter" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="ChipRed" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DetectPlayer" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
shape = SubResource( 2 )

[node name="Bash" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bash"]
shape = SubResource( 3 )

[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_DetectPlayer_body_exited"]
[connection signal="area_entered" from="Bash" to="." method="_on_Bash_area_entered"]
